export interface SecurityRuleId {
  readonly value: string
}
